--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -131,7 +131,7 @@
                     <a routerLink="/chemigation-inspections" class="dropdown-item">
                         Chemigation Inspections
                     </a>
-                    <a routerLink="/" class="dropdown-item disabled">
+                    <a routerLink="/water-quality-inspections" class="dropdown-item">
                         Water Quality Inspections
                     </a>
                     <a routerLink="/" class="dropdown-item disabled">
