--- a/Source/Zybach.Web/src/app/shared/components/chemigation-inspection-upsert/chemigation-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-inspection-upsert/chemigation-inspection-upsert.component.html
@@ -110,7 +110,7 @@
                     <label for="hasVacuumReliefValve" class="mr-4">Yes</label>
                     <input type="radio" id="notHasVacuumReliefValve" class="mr-2" name="HasVacuumReliefValve"
                         [value]="false" [(ngModel)]="inspection.HasVacuumReliefValve">
-                    <label for="notHasVacuumReliefValve" class="mr-2">No</label>
+                    <label for="notHasVacuumReliefValve">No</label>
                 </div>
             </div>
 
@@ -150,4 +150,5 @@
 
         </div>
     </div>
+
 </form>
