--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -1,25 +1,27 @@
 <nav aria-label="breadcrumb" *ngIf="waterQualityInspection">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
-            <a routerLink="/chemigation-permits">Water Quality Inspections</a>
+            <a routerLink="/water-quality-inspections">Water Quality Inspections</a>
         </li>
         <li class="breadcrumb-item active">Well
             #{{waterQualityInspection?.Well.WellRegistrationID }}</li>
         <li class="breadcrumb-item" aria-current="page">
-            {{waterQualityInspection.InspectionDate | date:'shortDate'}}
+            {{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}
         </li>
     </ol>
 </nav>
 <app-alert-display></app-alert-display>
 <div class="row container" *ngIf="waterQualityInspection">
     <div class="col-12">
-        <h2 class="d-inline-block">{{waterQualityInspection.InspectionDate | date:'shortDate'}}</h2>
+        <h2 class="d-inline-block">{{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}</h2>
     </div>
     <div class="row container" *ngIf="waterQualityInspection">
         <div class="col-12 col-sm-6 label"><strong>Well: </strong></div>
         <div class="col-12 col-sm-6"><a *ngIf="waterQualityInspection.Well" routerLink="/wells/{{waterQualityInspection.Well.WellRegistrationID}}">{{waterQualityInspection.Well.WellRegistrationID}}</a></div>
         <div class="col-12 col-sm-6 label"><strong>Inspected By: </strong></div>
         <div class="col-12 col-sm-6"><a *ngIf="waterQualityInspection.Inspector" routerLink="/users/{{waterQualityInspection.Inspector.UserID}}">{{waterQualityInspection.Inspector.FullNameLastFirst}}</a></div>
+        <div class="col-12 col-sm-6 label"><strong>Inspection Type: </strong></div>
+        <div class="col-12 col-sm-6">{{waterQualityInspection.WaterQualityInspectionTypeName}}</div>
     </div>
 </div>
 <div class="row mt-4 container" *ngIf="waterQualityInspection">
@@ -105,6 +107,17 @@
                             <div class="col-6 text-left">
                                 <p>
                                     {{waterQualityInspection.CropTypeName}}
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row col-12">
+                            <div class="col-6 text-right">
+                                <p><strong>Notes: </strong></p>
+                            </div>
+                            <div class="col-6 text-left">
+                                <p>
+                                    {{waterQualityInspection.InspectionNotes}}
                                 </p>
                             </div>
                         </div>
