--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -339,21 +339,27 @@
                         <h5>Inspections</h5>
                         <div *ngIf="currentYearAnnualRecord.Inspections.length > 0 ; then hasInspections else noInspections"></div>
                         <ng-template #hasInspections>
+                            <p>Chemigation inspections for the current record year</p>
 
-                            <nav>
-                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                    <a [ngClass]="{'nav-link': true, 'active': isFirst}" *ngFor="let inspection of getInspections(); first as isFirst"
-                                        id="inspection-{{inspection.ChemigationInspectionID}}" data-toggle="tab" 
-                                        href="#nav-inspection-{{inspection.ChemigationInspectionID}}" role="tab">
-                                        <strong>{{inspection.InspectionDate | date:'shortDate'}} - {{inspection.ChemigationInspectionStatusName}}</strong>
+                            <div class="row col-12">
+                                <nav class="col-8">
+                                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                        <a [ngClass]="{'nav-link': true, 'active': isFirst}" *ngFor="let inspection of getInspections(); first as isFirst"
+                                            id="inspection-{{inspection.ChemigationInspectionID}}" data-toggle="tab" 
+                                            href="#nav-inspection-{{inspection.ChemigationInspectionID}}" role="tab">
+                                            <strong>{{inspection.InspectionDate | date:'shortDate'}} - {{inspection.ChemigationInspectionStatusName}}</strong>
+                                        </a>
+                                    </div>
+                                </nav>
+                                <div class="col-4 float-right">
+                                    <a class="btn btn-zybach btn-md float-right"
+                                        routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/add-inspection">
+                                        <span class="fas fa-plus"></span> Add Inspection
                                     </a>
-                                    <a class="nav-link" role="tab" id="add-inspection" data-toggle="tab" href="#nav-add-inspection">
-                                        <strong>
-                                            <span class="fas fa-plus"></span> Add Inspection
-                                        </strong>
-                                    </a>
+    
                                 </div>
-                            </nav>
+                                
+                            </div>
 
                             <div class="tab-content" id="nav-tabContent">
                                 <div [ngClass]="{'tab-pane': true, 'fade': true, 'show': true, 'active': isFirst}" 
@@ -368,6 +374,7 @@
                                                 </div>
                                                 <div class="col-6 text-left">
                                                     <p>{{inspection.InspectionDate | date:'shortDate'}}
+                                                        <em *ngIf="!inspection.InspectionDate" class="text-muted">N/A</em>
                                                     </p>
                                                 </div>
                                             </div>
@@ -508,34 +515,29 @@
                                             </div>
             
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="nav-add-inspection" role="tabpanel">
 
-                                    <form (ngSubmit)="onSubmit(addChemigationInspectionForm)" #addChemigationInspectionForm="ngForm">
-
-                                        <zybach-chemigation-inspection-upsert #inspectionUpsertForm
-                                        [(inspection)]="inspection">
-                                        </zybach-chemigation-inspection-upsert >
-    
-                                        <div class="col-sm text-right">
-                                            <button type="submit" class="btn btn-zybach mr-1">
-                                                <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                                                Save
-                                            </button>
-                                            <a class="btn btn-secondary ml-1"
-                                                routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
-                                                Cancel
+                                        <div *ngIf="isFirst" class="col-4 float-right">
+                                            <a class="btn btn-zybach btn-md float-right"
+                                            routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/{{inspection.ChemigationInspectionID}/edit">
+                                            <span class="fas fa-edit"></span> Edit Inspection
                                             </a>
                                         </div>
 
-                                    </form>
-
+                                    </div>
                                 </div>
                             </div>
                             
                         </ng-template>
-                        <ng-template #noInspections><p>No inspection records found for this year.</p></ng-template>
+
+                        <ng-template #noInspections>
+                            <p>No inspection records found for this year.</p>
+                            <div class="col-4 float-right">
+                                <a class="btn btn-zybach btn-md float-right"
+                                    routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/add-inspection">
+                                    <span class="fas fa-plus"></span> Add Inspection
+                                </a>
+                            </div>
+                        </ng-template>
                     </div>
 
                 </div>
