delete inspections working

--- a/Source/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
@@ -37,7 +37,7 @@
         [(inspection)]="inspection">
         </zybach-chemigation-inspection-upsert >
 
-        <div class="col-12 text-right mr-3">
+        <div class="col-12 text-right mt-3 mr-3">
             <button type="submit" class="btn btn-zybach mr-1">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 Save
