--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -23,6 +23,8 @@
         </div>
         <div class="col-12 col-sm-6 label"><strong>County: </strong></div>
         <div class="col-12 col-sm-6">{{chemigationPermit.County.CountyDisplayName}}</div>
+        <!-- <div class="col-12 col-sm-6 label"><strong>Last Inspected: </strong></div>
+        <div class="col-12 col-sm-6">{{chemigationPermit.LatestInspection.InspectionDate}}</div> -->
     </div>
     <div class="row container">
         <div class="col-12">
@@ -340,9 +342,17 @@
                         <div *ngIf="currentYearAnnualRecord.Inspections.length > 0 ; then hasInspections else noInspections"></div>
                         <ng-template #hasInspections>
                             <p>Chemigation inspections for the current record year</p>
+                            
+                            <div class="row float-right">
+                                <a class="btn btn-zybach btn-md float-right mr-3"
+                                    routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/add-inspection">
+                                    <span class="fas fa-plus"></span> Add Inspection
+                                </a>
 
-                            <div class="row col-12">
-                                <nav class="col-8">
+                            </div>
+                            
+                            <div class="row">
+                                <nav>
                                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                         <a [ngClass]="{'nav-link': true, 'active': isFirst}" *ngFor="let inspection of getInspections(); first as isFirst"
                                             id="inspection-{{inspection.ChemigationInspectionID}}" data-toggle="tab" 
@@ -351,17 +361,10 @@
                                         </a>
                                     </div>
                                 </nav>
-                                <div class="col-4 float-right">
-                                    <a class="btn btn-zybach btn-md float-right"
-                                        routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/add-inspection">
-                                        <span class="fas fa-plus"></span> Add Inspection
-                                    </a>
-    
-                                </div>
-                                
+                            
                             </div>
 
-                            <div class="tab-content" id="nav-tabContent">
+                            <div class="tab-content col-12" id="nav-tabContent">
                                 <div [ngClass]="{'tab-pane': true, 'fade': true, 'show': true, 'active': isFirst}" 
                                     *ngFor="let inspection of getInspections(); first as isFirst" 
                                     id="nav-inspection-{{inspection.ChemigationInspectionID}}" role="tabpanel">
@@ -396,7 +399,7 @@
                                                 </div>
                                                 <div class="col-6 text-left">
                                                     <p>{{inspection.Inspector?.FullNameLastFirst}}
-                                            
+                                                        <em *ngIf="!inspection.Inspector" class="text-muted">N/A</em>
                                                     </p>
                                                 </div>
                                             </div>
@@ -513,14 +516,20 @@
                                                     </p>
                                                 </div>
                                             </div>
-            
+                                            
                                         </div>
-
-                                        <div *ngIf="isFirst" class="col-4 float-right">
-                                            <a class="btn btn-zybach btn-md float-right"
-                                            routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/{{inspection.ChemigationInspectionID}/edit">
+                                        
+                                        <div *ngIf="isFirst" class="row col-6 mt-3 mr-3">
+                                            <a class="btn btn-zybach btn-md mr-3"
+                                            routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/{{inspection.ChemigationInspectionID}}/edit">
                                             <span class="fas fa-edit"></span> Edit Inspection
                                             </a>
+                                            
+                                            <button type="button" class="btn btn-zybach btn-md mr-3" [disabled]="isPerformingAction" (click)="launchDeleteInspectionModal(inspection.ChemigationInspectionID)">
+                                                <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                                                <span class="fas fa-trash"></span> Delete Inspection
+                                            </button>
+
                                         </div>
 
                                     </div>
@@ -551,3 +560,25 @@
         </div>
     </div>
 </div>
+
+<ng-template #deleteInspectionModal let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Confirm Delete</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        Are you sure you want to delete this inspection?
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-zybach btn-sm" [disabled]="isPerformingAction" (click)="deleteInspectionByID()">
+            <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+            Confirm
+        </button>
+        <button type="button" class="btn btn-secondary btn-sm" (click)="modal.close('Cancel click')"
+            [disabled]="isPerformingAction">
+            Cancel
+        </button>
+    </div>
+</ng-template>
