water quality inspection endpoint done, WIP: upsert form for create/edit

--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -226,7 +226,7 @@
 
                         <div class="row col-12">
                             <div class="col-6 text-right">
-                                <p><strong>SiO<sup>2</sup>: </strong></p>
+                                <p><strong>SiO<sub>2</sub>: </strong></p>
                             </div>
                             <div class="col-6 text-left">
                                 <p>
