fix routerlink typo

--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -62,7 +62,7 @@
 
                         <div class="row col-12">
                             <div class="col-6 text-right">
-                                <p><strong>Field Alkilinity: </strong></p>
+                                <p><strong>Field Alkalinity: </strong></p>
                             </div>
                             <div class="col-6 text-left">
                                 <p>{{waterQualityInspection.FieldAlkilinity}}
