--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/water-quality-inspections">Water Quality Inspections</a>
         </li>
         <li class="breadcrumb-item" aria-current="page">
-            <a routerLink="/water-quality-inspections/{{waterQualityInspection.WaterQualityInspectionID}}">{{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}</a>
+            <a routerLink="/water-quality-inspections/{{waterQualityInspectionID}}">{{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
             Edit Inspection
