edit button on WQI detail page; fix typo in edit component routerlink

--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -261,5 +261,12 @@
                 </div>
             </div>
         </div>
+        <div class="row float-right mt-3">
+            <a class="btn btn-zybach btn-md float-right mr-3"
+                routerLink="/water-quality-inspections/{{waterQualityInspection.WaterQualityInspectionID}}/edit">
+                <span class="fas fa-edit"></span> Edit Inspection
+            </a>
+
+        </div>
     </div>
 </div>
