--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
@@ -37,7 +37,7 @@
                 Save
             </button>
             <a class="btn btn-secondary ml-1"
-                routerLink="/water-quality-inspections/{{waterQualityInspection.WaterQualityInspectionID}}">
+                routerLink="/water-quality-inspections/{{waterQualityInspectionID}}">
                 Cancel
             </a>
         </div>
