--- a/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/water-quality-inspection-upsert/water-quality-inspection-upsert.component.html
@@ -51,49 +51,49 @@
                     <label><strong>Temperature: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="Temperature" [(ngModel)]="inspection.Temperature" />
+                    <input type="number" step="0.0001" class="form-control" name="Temperature" [(ngModel)]="inspection.Temperature" />
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>pH: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="PH" [(ngModel)]="inspection.PH" />
+                    <input type="number" step="0.0001" class="form-control" name="PH" [(ngModel)]="inspection.PH" />
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>Conductivity: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="Conductivity" [(ngModel)]="inspection.Conductivity" />
+                    <input type="number" step="0.0001" class="form-control" name="Conductivity" [(ngModel)]="inspection.Conductivity" />
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>Field Alkalinity: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="FieldAlkilinity" [(ngModel)]="inspection.FieldAlkilinity" />
+                    <input type="number" step="0.0001" class="form-control" name="FieldAlkilinity" [(ngModel)]="inspection.FieldAlkilinity" />
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>Field Nitrates: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="FieldNitrates" [(ngModel)]="inspection.FieldNitrates" />
+                    <input type="number" step="0.0001" class="form-control" name="FieldNitrates" [(ngModel)]="inspection.FieldNitrates" />
                 </div>
             
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>Lab Nitrates: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="LabNitrates" [(ngModel)]="inspection.LabNitrates" />
+                    <input type="number" step="0.0001" class="form-control" name="LabNitrates" [(ngModel)]="inspection.LabNitrates" />
                 </div>
 
                 <div class="col-6 control-label text-right mb-2">
                     <label><strong>Salinity: </strong></label>
                 </div>
                 <div class="col-6 text-left mb-2">
-                    <input type="number" class="form-control" name="Salinity" [(ngModel)]="inspection.Salinity" />
+                    <input type="number" step="0.0001" class="form-control" name="Salinity" [(ngModel)]="inspection.Salinity" />
                 </div>
     
                 <div class="col-6 control-label text-right mb-2">
@@ -124,7 +124,7 @@
                         <label><strong>MV: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="MV" [(ngModel)]="inspection.MV" />
+                        <input type="number" step="0.0001" class="form-control" name="MV" [(ngModel)]="inspection.MV" />
                     </div>
                 </div>
 
@@ -133,7 +133,7 @@
                         <label><strong>Na: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Sodium" [(ngModel)]="inspection.Sodium" />
+                        <input type="number" step="0.0001" class="form-control" name="Sodium" [(ngModel)]="inspection.Sodium" />
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <label><strong>Ca: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Calcium" [(ngModel)]="inspection.Calcium" />
+                        <input type="number" step="0.0001" class="form-control" name="Calcium" [(ngModel)]="inspection.Calcium" />
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
                         <label><strong>Mg: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Magnesium" [(ngModel)]="inspection.Magnesium" />
+                        <input type="number" step="0.0001" class="form-control" name="Magnesium" [(ngModel)]="inspection.Magnesium" />
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
                         <label><strong>K: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Potassium" [(ngModel)]="inspection.Potassium" />
+                        <input type="number" step="0.0001" class="form-control" name="Potassium" [(ngModel)]="inspection.Potassium" />
                     </div>
                 </div>
 
@@ -169,7 +169,7 @@
                         <label><strong>HCO<sub>3</sub><sup>-</sup>: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="HydrogenCarbonate" [(ngModel)]="inspection.HydrogenCarbonate" />
+                        <input type="number" step="0.0001" class="form-control" name="HydrogenCarbonate" [(ngModel)]="inspection.HydrogenCarbonate" />
                     </div>
                 </div>
 
@@ -178,7 +178,7 @@
                         <label><strong>CaCO<sub>3-</sub>: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="CalciumCarbonate" [(ngModel)]="inspection.CalciumCarbonate" />
+                        <input type="number" step="0.0001" class="form-control" name="CalciumCarbonate" [(ngModel)]="inspection.CalciumCarbonate" />
                     </div>
                 </div>
 
@@ -187,7 +187,7 @@
                         <label><strong>SO<sub>4</sub><sup>2-</sup>: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Sulfate" [(ngModel)]="inspection.Sulfate" />
+                        <input type="number" step="0.0001" class="form-control" name="Sulfate" [(ngModel)]="inspection.Sulfate" />
                     </div>
                 </div>
 
@@ -196,7 +196,7 @@
                         <label><strong>Cl: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="Chloride" [(ngModel)]="inspection.Chloride" />
+                        <input type="number" step="0.0001" class="form-control" name="Chloride" [(ngModel)]="inspection.Chloride" />
                     </div>
                 </div>
                 
@@ -205,7 +205,7 @@
                         <label><strong>SiO<sub>2</sub>: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="SiliconDioxide" [(ngModel)]="inspection.SiliconDioxide" />
+                        <input type="number" step="0.0001" class="form-control" name="SiliconDioxide" [(ngModel)]="inspection.SiliconDioxide" />
                     </div>
                 </div>
 
@@ -214,7 +214,7 @@
                         <label><strong>Pre Water Level: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="PreWaterLevel" [(ngModel)]="inspection.PreWaterLevel" />
+                        <input type="number" step="0.0001" class="form-control" name="PreWaterLevel" [(ngModel)]="inspection.PreWaterLevel" />
                     </div>
                 </div>
                 
@@ -223,7 +223,7 @@
                         <label><strong>Post Water Level: </strong></label>
                     </div>
                     <div class="col-6 text-left mb-2">
-                        <input type="number" class="form-control" name="PostWaterLevel" [(ngModel)]="inspection.PostWaterLevel" />
+                        <input type="number" step="0.0001" class="form-control" name="PostWaterLevel" [(ngModel)]="inspection.PostWaterLevel" />
                     </div>
                 </div>
 
