first draft on getting water level inspection data from beehive displaying on a grid

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -134,7 +134,7 @@
                     <a routerLink="/water-quality-inspections" class="dropdown-item">
                         Water Quality Inspections
                     </a>
-                    <a routerLink="/" class="dropdown-item disabled">
+                    <a routerLink="/water-level-inspections" class="dropdown-item">
                         Water Level Inspections
                     </a>
                 </div>
