--- a/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -3,9 +3,10 @@
         <li class="breadcrumb-item">
             <a routerLink="/water-quality-inspections">Water Quality Inspections</a>
         </li>
-        <li class="breadcrumb-item active">Well
-            #{{waterQualityInspection?.Well.WellRegistrationID }}</li>
         <li class="breadcrumb-item" aria-current="page">
+            <a routerLink="/wells/{{waterQualityInspection.Well.WellRegistrationID}}">Well #{{waterQualityInspection.Well.WellRegistrationID}}</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
             {{waterQualityInspection.InspectionDate | date:'MM/dd/yyyy'}}
         </li>
     </ol>
