working GetByPermitNumberAsDetailedDto, displaying last inspection date at top of detail page

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -23,8 +23,10 @@
         </div>
         <div class="col-12 col-sm-6 label"><strong>County: </strong></div>
         <div class="col-12 col-sm-6">{{chemigationPermit.County.CountyDisplayName}}</div>
-        <!-- <div class="col-12 col-sm-6 label"><strong>Last Inspected Date: </strong></div>
-        <div class="col-12 col-sm-6">{{chemigationPermit.LatestInspection.InspectionDate}}</div> -->
+        <div class="col-12 col-sm-6 label"><strong>Last Inspected Date: </strong></div>
+        <div class="col-12 col-sm-6">{{chemigationPermit.LatestInspection?.InspectionDate | date:'shortDate'}}
+            <em *ngIf="!chemigationPermit.LatestInspection?.InspectionDate" class="text-muted">N/A</em>
+        </div>
     </div>
     <div class="row container">
         <div class="col-12">
